h3 align fix, background position pix

--- a/civil-engineering.less
+++ b/civil-engineering.less
@@ -4,5 +4,6 @@
     &_picture-container {
         &:extend(.picture-container all);
         background: url("img/atlas.jpg");
+        background-position: center -50px !important;
     }
 }
