--- a/contacts.less
+++ b/contacts.less
@@ -23,5 +23,9 @@
     a:active {
         text-decoration: none;
     }
+
+    h3{
+        text-align: center;
+    }
 }
 
